Fixed Overflow of Textarea in Input Area

--- a/style.css
+++ b/style.css
@@ -1,46 +1,43 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 * {
-	font-family: 'Poppins', sans-serif;
-  font-size: 16px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
 }
 
 body, h1, h2, p, textarea {
     margin: 0;
     padding: 0;
-  }
+}
   
-  
-  body {
+body {
     background-color: #f0f0f0;
     font-family: Arial, sans-serif;
-  }
-  
- 
-  header {
+}
+
+header {
     background-color: #333;
     color: #fff;
     padding: 20px;
     text-align: center;
-  }
-  
- 
-  h1 {
+}
+
+h1 {
     font-size: 36px;
-  }
-  .markdown-input{
+}
+
+.markdown-input {
     text-align: center;
-  }
-  
-  section{
+}
+
+section {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: stretch;
-  }
- 
-  
-  .input-area {
+}
+
+.input-area {
     margin-top: 20px;
     background-color: #fff;
     border-radius: 10px;
@@ -51,26 +48,23 @@ body, h1, h2, p, textarea {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-  }
-  
-  
-  textarea {
-    width: 100vw;
-    max-width: 600px;
+}
+
+textarea {
+    width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    height: 100vh;
-    flex:1;
-  }
+    height: 100%; /* Set textarea height to 100% of parent div (.input-area) */
+    resize: vertical;
+}
 
-  textarea:focus{
-     border-color: #e74c3c;
-     box-shadow: 2px 2px 10px rgba(231, 76, 60, 0.4);
-  }
-  
+textarea:focus {
+    border-color: #e74c3c;
+    box-shadow: 2px 2px 10px rgba(231, 76, 60, 0.4);
+}
 
-  .preview-area {
+.preview-area {
     display: flex;
     flex-direction: column;
     background-color: #fff;
@@ -79,37 +73,26 @@ body, h1, h2, p, textarea {
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 40%;
-  }
-
-  .code-block {
-    background-color: #e1e1e1;
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
 }
-  
 
-  #markdown-preview {
+#markdown-preview {
     border: 2px solid black;
     margin-top: 10px;
     height: 100vh;
     overflow: auto;
     padding: 10px;
-  }
-  
-  
-  h2 {
+}
+
+h2 {
     font-size: 24px;
     margin-bottom: 10px;
-  }
-  
- 
-  a {
+}
+
+a {
     color: #007bff;
     text-decoration: none;
-  }
-  
-  
-  a:hover {
+}
+
+a:hover {
     text-decoration: underline;
-  }
+}
